Fix fonts issues on mobile / remove header

--- a/app/_components/Container/Container.module.scss
+++ b/app/_components/Container/Container.module.scss
@@ -1,3 +1,3 @@
 .container {
-	width: min(100%, 2048px);
+	width: min(100vw, 2048px);
 }
