--- a/app/_components/SearchSection/ProjectsList/ProjectsListItem/TagsList/TagsList.module.scss
+++ b/app/_components/SearchSection/ProjectsList/ProjectsListItem/TagsList/TagsList.module.scss
@@ -1,5 +1,6 @@
 .list {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 8px;
 
 	font-size: 1.6rem;
