--- a/app/_global.css
+++ b/app/_global.css
@@ -5,11 +5,12 @@ body {
 
 body {
 	display: grid;
-	grid-template-rows: 100px 1fr 100px;
+	grid-template-rows: 1fr 100px;
 	grid-template-areas:
-		"header"
 		"main"
 		"footer";
+
+	min-width: var(--min-body-width);
 
 	background-color: var(--primary);
 
