--- a/app/_sizes.css
+++ b/app/_sizes.css
@@ -1,4 +1,4 @@
 :root {
 	--device-height: 100vh;
-	--min-body-width: 500px;
+	--min-body-width: 300px;
 }
